<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>UserActivityDialog</class>
 <widget class="QDialog" name="UserActivityDialog">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>361</width>
    <height>207</height>
   </rect>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout">
   <property name="margin">
    <number>5</number>
   </property>
   <item>
    <widget class="QComboBox" name="cmbGeneral"/>
   </item>
   <item>
    <widget class="QComboBox" name="cmbSpecific"/>
   </item>
   <item>
    <widget class="QPlainTextEdit" name="pteText"/>
   </item>
   <item>
    <widget class="QDialogButtonBox" name="dbbButtons">
     <property name="standardButtons">
      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
     </property>
    </widget>
   </item>
  </layout>
 </widget>
 <layoutdefault spacing="6" margin="11"/>
 <resources/>
 <connections/>
</ui>
